<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pauseLabel"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp">

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="resumeGame"
            android:text="@string/resumeLabel"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showPlayScreen"
            android:text="@string/play"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showSettingsScreen"
            android:text="@string/settingsLabel"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

</RelativeLayout>