<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <es.udc.psi.pacman.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/btnUp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/arrow_up" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLeft"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/arrow_left" />

            <View android:layout_width="60dp" android:layout_height="60dp" />

            <Button
                android:id="@+id/btnRight"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/arrow_right" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDown"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/arrow_down" />
    </LinearLayout>
</FrameLayout>
