<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controlsLabel"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/yellow" />

    <Switch
        android:id="@+id/controlswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/controlsText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/controls"
            android:textSize="17dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="8dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:layout_gravity="center">

            <View android:layout_width="40dp" android:layout_height="40dp" />
            <Button
                android:id="@+id/btnUp2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/arrow_up"
                android:textSize="20dp" />
            <View android:layout_width="40dp" android:layout_height="40dp" />

            <Button
                android:id="@+id/btnLeft2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/arrow_left"
                android:textSize="20dp" />
            <View android:layout_width="40dp" android:layout_height="40dp" />
            <Button
                android:id="@+id/btnRight2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/arrow_right"
                android:textSize="20dp" />

            <View android:layout_width="40dp" android:layout_height="40dp" />
            <Button
                android:id="@+id/btnDown2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/arrow_down"
                android:textSize="20dp" />
            <View android:layout_width="40dp" android:layout_height="40dp" />
        </GridLayout>
    </LinearLayout>
</LinearLayout>
